# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  snake.py  tasks.py
dokumentaatio/: arkkitehtuuri.md  ohjeet.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: gitlog.txt
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: .coverage  clock.py  event_queue.py  game_loop.py  index.py  level.py  load_image.py  renderer.py
src/assets/: database.db
src/database/: database_actions.py  database_connection.py  database_init.py  user_repository.py
src/sprites/: apple.py  snake.py  snake_tail.py
src/tests/: apple_test.py  gameloop_test.py  snake_tail_test.py  snake_test.py  user_repository_test.py
src/ui/: button.py  menu.py  text  text_box.py
